[gd_scene load_steps=3 format=3 uid="uid://contested_preview_panel"]

[ext_resource type="Script" path="res://scripts/ui/gameplay/contested_preview_panel.gd" id="1_contested_preview_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.2, 0.1, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.96, 0.26, 0.21, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[node name="ContestedPreviewPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 280.0
offset_bottom = 200.0
script = ExtResource("1_contested_preview_panel")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(260, 0)
layout_mode = 0
offset_right = 280.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="WarningIcon" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚öîÔ∏è"
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "Wild Herd (3 animals)"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnimalsRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AnimalsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AnimalsRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Animals:"
vertical_alignment = 1

[node name="AnimalIconsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AnimalsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="StrengthRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StrengthIcon" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StrengthRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üí™"
vertical_alignment = 1

[node name="StrengthTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StrengthRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Strength:"
vertical_alignment = 1

[node name="StrengthLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StrengthRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Medium (12)"
vertical_alignment = 1

[node name="DifficultyRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DifficultyIcon" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DifficultyRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚ö†Ô∏è"
vertical_alignment = 1

[node name="DifficultyTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DifficultyRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Difficulty:"
vertical_alignment = 1

[node name="DifficultyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DifficultyRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.76, 0.03, 1)
theme_override_font_sizes/font_size = 14
text = "Medium"
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BattleButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "‚öîÔ∏è BATTLE"
